perte 6 casi acabada

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "cSpell.words": [
-        "JAJANT"
+        "cuemanco",
+        "Cuemanco",
+        "gatita",
+        "JAJANT",
+        "mauricio",
+        "oseuq"
     ]
 }
