--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,9 @@
         "gatita",
         "JAJANT",
         "mauricio",
-        "oseuq"
+        "metrobus",
+        "oseuq",
+        "periferico",
+        "pompompurin"
     ]
 }
