--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "arcoiris",
         "cuemanco",
         "Cuemanco",
         "gatita",
@@ -8,6 +9,9 @@
         "metrobus",
         "oseuq",
         "periferico",
-        "pompompurin"
+        "pompompurin",
+        "vacio",
+        "vámonos",
+        "Vámonos"
     ]
 }
