work in progress

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "cuemanco",
         "Cuemanco",
         "gatita",
+        "jajant",
         "JAJANT",
         "mauricio",
         "metrobus",
