--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "arcoiris",
         "cuemanco",
         "Cuemanco",
+        "Dafne",
         "gatita",
         "jajant",
         "JAJANT",
@@ -11,6 +12,8 @@
         "oseuq",
         "periferico",
         "pompompurin",
+        "revoloteantes",
+        "Shhh",
         "vacio",
         "vámonos",
         "Vámonos"
